@@ -22,6 +22,10 @@
 using System;
 using System.Runtime.InteropServices;
 using System.Text;
+using System.Net;
+using System.IO;
+using System.Security.Cryptography;
+
 
 namespace Giver
 {
@@ -132,5 +136,116 @@ namespace Giver
 				}
 			}
 		}
+
+
+        public static Gdk.Pixbuf GetPhotoFromUri(string uri)
+        {
+			Gdk.Pixbuf pixbuf = null;
+
+			System.Net.HttpWebRequest request = (HttpWebRequest) HttpWebRequest.Create(uri);
+
+			// Send request to send the file
+			request.Method = "GET";
+			//request.ContentLength = 0;
+			// request.GetRequestStream().Close();
+
+			// Read the response to the request
+			HttpWebResponse response = (HttpWebResponse)request.GetResponse();
+
+			if( response.StatusCode == HttpStatusCode.OK ) {
+				Logger.Debug("Response was OK");
+
+				byte[] buffer = new byte[response.ContentLength];
+				int sizeRead = 0;
+				int totalRead = 0;
+				Stream stream = response.GetResponseStream();
+				Logger.Debug("About to read photo of size {0}", response.ContentLength);
+
+				try {
+
+					do {
+						sizeRead = stream.Read(buffer, totalRead, (int)(response.ContentLength - totalRead));
+						totalRead += sizeRead;
+						Logger.Debug("SizeRead = {0}, totalRead = {1}", sizeRead, totalRead);
+					} while( (sizeRead > 0) && (totalRead < response.ContentLength) );
+
+					Logger.Debug("We Read the photo and it's {0} bytes", totalRead);
+					Logger.Debug("The content length is {0} bytes", response.ContentLength);
+
+					stream.Close();
+				} catch (Exception e) {
+					Logger.Debug("Exception when reading file from stream: {0}", e.Message);
+					Logger.Debug("Exception {0}", e);
+				}
+
+				pixbuf = new Gdk.Pixbuf(buffer);
+
+			} else {
+				Logger.Debug("Unable to get the photo because {0}", response.StatusDescription);
+			}
+			return pixbuf;
+        }
+
+		public static string GetGravatarUri(string gravatarID)
+		{
+            System.Text.StringBuilder image = new System.Text.StringBuilder();
+            image.Append("http://www.gravatar.com/avatar.php?");
+            image.Append("gravatar_id=");
+            image.Append(gravatarID);
+            //image.Append("&rating=G");
+            image.Append("&size=48");
+
+			Logger.Debug("The Gravatar Uri is {0}", image.ToString());
+
+			return image.ToString();
+		}
+
+
+		// Create an md5 sum string of this string
+		public static string GetMd5Sum(string str)
+		{
+			System.Security.Cryptography.MD5CryptoServiceProvider x = 
+							new System.Security.Cryptography.MD5CryptoServiceProvider();
+
+			byte[] bs = System.Text.Encoding.UTF8.GetBytes(str);
+			bs = x.ComputeHash(bs);
+
+			System.Text.StringBuilder s = new System.Text.StringBuilder();
+			foreach (byte b in bs)
+			{
+			   s.Append(b.ToString("x2").ToLower());
+			}
+
+			return s.ToString();
+/*
+
+
+
+		    // First we need to convert the string into bytes, which
+		    // means using a text encoder.
+		    Encoder enc = System.Text.Encoding.Unicode.GetEncoder();
+
+		    // Create a buffer large enough to hold the string
+		    byte[] unicodeText = new byte[str.Length * 2];
+		    enc.GetBytes(str.ToCharArray(), 0, str.Length, unicodeText, 0, true);
+
+		    // Now that we have a byte array we can ask the CSP to hash it
+		    MD5 md5 = new MD5CryptoServiceProvider();
+		    byte[] result = md5.ComputeHash(unicodeText);
+
+		    // Build the final string by converting each byte
+		    // into hex and appending it to a StringBuilder
+		    StringBuilder sb = new StringBuilder();
+		    for (int i=0;i<result.Length;i++)
+		    {
+		        sb.Append(result[i].ToString("X2"));
+		    }
+
+		    // And return it
+		    return sb.ToString();
+*/
+        }
+
+
 	}
 }
